changed the signup-form to a more non specific name (form) as I used it in login form too. Added content to login form page. Fixed alignment of logos

--- a/code/style.css
+++ b/code/style.css
@@ -52,20 +52,25 @@ body {
 
 /* wraps all contents in the header and sets header background picture */
 .header {
-  display: block;
+  display: flex;
   position: relative;
+  justify-content: flex-end;
   background-image: url("../pictures/ISS.jpg");
   background-attachment: fixed;
   background-size: cover;
   height: 35em;
+  width: 100%;
   box-shadow: 0 1px 4px 2px #f1df77;
   background-position-y: -15vh;
   margin-bottom: 40px;
+  overflow: hidden;
 }
 
 /* a simpler header for sites that are not index-site */
 .simple-header {
   position: relative;
+  display: flex;
+  justify-content: flex-end;
   width: 100%;
   height: 180px;
   background:rgba(0, 0, 0, 0.575);
@@ -75,9 +80,8 @@ body {
 .logo {
   width: 280px;
   height: 144px;
-  position: absolute;
-  bottom: 0;
-  right:0;
+  position: relative;
+  align-self: flex-end;
 }
 
 .logo img, .logo-simple img  {
@@ -89,10 +93,9 @@ body {
 /*hides the simpler logo used only for mobile device*/
 .logo-simple
 {
-  display:none;
-  position: absolute;
-  bottom: 0;
-  right:0;
+  display: none;
+  position: relative;
+  align-self: flex-end;
 }
 
 
@@ -388,7 +391,7 @@ p:hover {
 }
 
 /*section for the sign-up page*/
-.signup {
+.form-section {
   position: relative;
   display: flex;
   justify-content: center;
@@ -397,7 +400,7 @@ p:hover {
 }
 
 /* styling of the sign-up form */
-.signup-form {
+.form {
   display: flex;
   position: absolute;
   height: 90%;
@@ -436,16 +439,21 @@ p:hover {
 
 @media screen and (max-device-width: 1024px),
 (max-width:1200px) {
-   /* styling of page name text in the header */
+  
+  .header {
+    height: 30em;
+    justify-content: center;
+  }
+
+  .simple-header {
+    justify-content: center;
+  }
+
+   /* styling of logo in the header. '*/
    .logo {
     width: 190px;
     height: 100px;
-    right: 40%;
-    }
-
-  .header {
-    height: 30em;
-  }
+   }
 
   /* adapting the meteor animation to smaller screen */
   .meteor {
@@ -521,6 +529,13 @@ p:hover {
   .header {
     height: 25em;
     background-image: url("../pictures/ISS1280px.jpg");
+    justify-content: flex-end;
+    align-items: flex-end;
+  }
+
+  .simple-header {
+    height: 50px;
+    justify-content: center;
   }
 
   .logo {
@@ -619,7 +634,7 @@ p:hover {
   }
 
   /* form stretches over full screen on mobile device*/
-  .signup-form {
+  .form {
     width: 100%;
     height: 100%;
     box-shadow: none;
